--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: anime-news-bot
+    name: Link-bot
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
