--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,8 @@ services:
         sync: false
       - key: API_HASH
         sync: false
+      - key: LINK_PIC
+        sync: false
       - key: BOT_TOKEN
         sync: false
       - key: START_PIC
